//package wanyou.game.protocol;
//请求离开房间
message BceChangeMap{
    required int32 mapID = 1;			//选择地图ID
}
